@@ -1,3 +1,7 @@
+2000-06-30  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* Death of Avatar works fairly well now.
+
 2000-06-28  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* Fullscreen-toggle and scaling work together (tested on X).
